#2829: fixed responsive table cut off last row issue

--- a/roles/ui/files/FWO.UI/wwwroot/css/site.css
+++ b/roles/ui/files/FWO.UI/wwwroot/css/site.css
@@ -538,3 +538,8 @@ overflow: hidden;
 .modal-body > * {
 max-width: 99%;
 }
+
+.table-responsive:has(> .table.table-bordered.th-bg-secondary.table-responsive.overflow-auto.sticky-header)
+{
+    padding-bottom: 30px;
+}
